# ZAHEER-MART-API

./: kong-docker-compose.yml  kong.yaml
Specs-Combiner/: Dockerfile.dev  pyproject.toml
Specs-Combiner/app/: main.py
codebase/: compose.yml
codebase/InventoryServices/: Dockerfile.dev  crud.py  pyproject.toml
codebase/InventoryServices/app/: crud.py  db.py  inventory.proto  inventory_pb2.py  kafka.py  main.py  models.py  settings.py
codebase/InventoryServices/app/consumer/: main.py
codebase/InventoryServices/app/producer/: producer.py
codebase/InventoryServices/tests/: test_inventory_service.py
codebase/NotificationServices/: Dockerfile.dev  pyproject.toml
codebase/NotificationServices/app/: db.py  handle_email.py  kafka.py  main.py  models.py  notification.proto  notification_pb2.py  settings.py
codebase/NotificationServices/app/consumer/: main.py
codebase/NotificationServices/tests/: test_notification_service.py
codebase/OrderServices/: Dockerfile.dev  pyproject.toml
codebase/OrderServices/app/: auth.py  crud.py  db.py  kafka.py  main.py  models.py  order.proto  order_pb2.py  settings.py
codebase/OrderServices/app/consumer/: main.py
codebase/OrderServices/app/producer/: producer.py
codebase/OrderServices/app/router/: user.py
codebase/OrderServices/tests/: test_order_service.py
codebase/PaymentServices/: Dockerfile.dev  pyproject.toml
codebase/PaymentServices/app/: auth.py  crud.py  db.py  kafka.py  main.py  models.py  payment.proto  payment_pb2.py  settings.py
codebase/PaymentServices/app/consumer/: main.py
codebase/PaymentServices/app/producer/: main.py
codebase/PaymentServices/app/router/: user.py
codebase/PaymentServices/app/stripe/: payment.py
codebase/PaymentServices/tests/: test_payment_service.py
codebase/ProductServices/: Dockerfile.dev  pyproject.toml
codebase/ProductServices/app/: crud.py  db.py  kafka.py  main.py  models.py  product.proto  product_pb2.py  settings.py
codebase/ProductServices/app/consumer/: main.py
codebase/ProductServices/app/producer/: producer.py
codebase/ProductServices/tests/: test_product_service.py
codebase/UserServices/: Dockerfile.dev  pyproject.toml
codebase/UserServices/app/: __init__.py  auth.py  crud.py  db.py  kafka.py  kakfafile.py  main.py  models.py  settings.py  user.proto  user_pb2.py
codebase/UserServices/app/consumer/: main.py
codebase/UserServices/app/producer/: producer.py
codebase/UserServices/tests/: areej.py  test_user_service.py
