[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["NxtGen-Dev-ZAH <zaheer.ahmad.contact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pydantic = "^2.8.2"
psycopg = "^3.2.1"
jsonmerge = "^1.9.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
